--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -478,12 +478,40 @@
       width: 930px;
       height: 606px;
       position: absolute; }
-    .register .signup table {
-      margin: auto auto; }
-      .register .signup table td {
-        padding-right: 20px; }
-        .register .signup table td label {
-          padding-left: 5px; }
+    .register .signup form {
+      margin: auto auto;
+      width: 90%;
+      padding: 15px; }
+      .register .signup form span {
+        display: inline-block;
+        margin-bottom: 10px;
+        width: 50%; }
+      .register .signup form span:nth-child(5) {
+        display: block; }
+        .register .signup form span:nth-child(5) input {
+          display: inline-block;
+          width: 600px; }
+        .register .signup form span:nth-child(5) button {
+          display: inline;
+          width: 100px;
+          height: 40px; }
+      .register .signup form label {
+        text-transform: uppercase;
+        display: block;
+        padding-bottom: 10px; }
+      .register .signup form input {
+        width: 350px;
+        height: 40px;
+        display: block;
+        margin-bottom: 20px; }
+      .register .signup form button {
+        font-size: 1rem;
+        width: 120px;
+        height: 35px;
+        text-transform: uppercase;
+        margin: auto auto;
+        background-color: #c9d6de;
+        display: block; }
     .register .signup h3 {
       text-transform: uppercase;
       font-size: 2rem;
@@ -501,28 +529,6 @@
         padding-bottom: 10px; }
       .register .signup h3 a:hover.other-register {
         border-bottom: #3d8ab9 solid 3px; }
-    .register .signup label {
-      text-transform: uppercase;
-      display: block;
-      padding-bottom: 10px; }
-    .register .signup input {
-      width: 350px;
-      height: 40px;
-      display: block;
-      margin-bottom: 20px; }
-    .register .signup select {
-      width: 32%;
-      height: 40px;
-      margin-right: 9px;
-      margin-bottom: 20px;
-      font-size: 0.9rem; }
-    .register .signup input[type="submit"] {
-      font-size: 1rem;
-      width: 120px;
-      height: 35px;
-      text-transform: uppercase;
-      margin: auto auto;
-      background-color: #c9d6de; }
 
 .footer {
   height: 100%;
