--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -622,13 +622,78 @@ $primary-font:  'Lato', sans-serif;
             height: 606px;
             position: absolute;
         }
-        table {
+        form {
             margin: auto auto;
-            td {
-                padding-right: 20px;
-                label {
-                    padding-left: 5px;
+            width: 90%;
+            padding: 15px;
+            span {
+                display: inline-block;
+                margin-bottom: 10px;
+                width: 50%;
+            }
+            span:nth-child(5) {
+                display: block;
+                input {
+                    display: inline-block;
+                    width: 600px;
                 }
+                button {
+                    display: inline;
+                    width: 100px;
+                    height: 40px;
+                }
+            }
+            // // Date picker
+            // div.rw-widget-container {
+            //     width: 700px;
+            // }
+            // div.rw-widget-picker {
+            //     background-color: transparent;
+            //     background-color: black;
+            // } 
+            // button#rw_1_date_calendar_label {
+            //     width: 71%;
+
+            // }
+            // div.rw-calendar-header {
+            //     text-align: center;
+            // }
+            // button.rw-calendar-btn-left.rw-btn.rw-btn-primary, button.rw-calendar-btn-right.rw-btn.rw-btn-primary {
+            //     width: 14.5%;
+            // }
+            // div.rw-calendar-footer {
+            //     width: 100%;
+            // }
+            // button.rw-btn.rw-btn-primary {
+            //     width: 100%;
+            // }
+            // div.rw-calendar-popup-transition,  div.rw-calendar-popup {
+            //     height: 100%;
+            //     width: 100%;
+            // }
+            // div.rw-calendar-popup-container {
+            //     height: 100%;
+            //     width: 100%;
+            // }
+            label {
+                text-transform: uppercase;
+                display: block;
+                padding-bottom: 10px;
+            }
+            input {
+                width: 350px;
+                height: 40px;
+                display: block;
+                margin-bottom: 20px;
+            }
+            button {
+                font-size: 1rem;
+                width: 120px;
+                height: 35px;
+                text-transform: uppercase;
+                margin: auto auto;
+                background-color: $secondary-darkcolor;
+                display: block;
             }
         }
         h3 {
@@ -651,32 +716,6 @@ $primary-font:  'Lato', sans-serif;
             a:hover.other-register {
                 border-bottom: $primary-color solid 3px;
             }
-        }
-        label {
-            text-transform: uppercase;
-            display: block;
-            padding-bottom: 10px;
-        }
-        input {
-            width: 350px;
-            height: 40px;
-            display: block;
-            margin-bottom: 20px;
-        }
-        select {
-            width: 32%;
-            height: 40px;
-            margin-right: 9px;
-            margin-bottom: 20px;
-            font-size: 0.9rem;
-        }
-        input[type="submit"] {
-            font-size: 1rem;
-            width: 120px;
-            height: 35px;
-            text-transform: uppercase;
-            margin: auto auto;
-            background-color: $secondary-darkcolor;
         }
     }
 }
