--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1,7 +1,186 @@
-*, *:before, *:after {
-  margin: 0;
+.cart {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #c9d6de;
+  height: 100%; }
+  .cart__basket {
+    background-color: #eff3f5;
+    padding: 20px;
+    width: 700px;
+    height: 100%; }
+    .cart__basket h3 {
+      padding: 10px 0px;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 1.5rem; }
+    .cart__basket a {
+      color: #42a8e7;
+      font-weight: bold; }
+    .cart__basket--items {
+      margin-bottom: 10px; }
+    .cart__basket--item {
+      height: 120px;
+      margin-bottom: 8px;
+      background-color: white; }
+    .cart__basket--item-delete {
+      text-transform: uppercase; }
+    .cart__basket--item-photo {
+      background-color: black;
+      height: 100px;
+      width: 100px;
+      display: inline-block;
+      margin: 10px; }
+    .cart__basket--item-details {
+      display: inline-block;
+      padding: 14px 15px;
+      vertical-align: top;
+      position: relative; }
+    .cart__basket--item-quantity {
+      display: inline-block;
+      position: absolute;
+      left: 300px;
+      top: 35px; }
+    .cart__basket--item-price {
+      display: inline-block;
+      position: absolute;
+      left: 400px;
+      top: 35px; }
+  .cart__payment {
+    background-color: white;
+    padding: 25px;
+    width: 400px; }
+    .cart__payment h4 {
+      padding: 10px;
+      color: #3d8ab9;
+      letter-spacing: 2px; }
+    .cart__payment td {
+      padding: 7px 10px;
+      padding-right: 40px; }
+    .cart__payment td:nth-child(2) {
+      font-weight: bold; }
+    .cart__payment tr:last-child {
+      font-weight: bold;
+      border-top: #3d8ab9 solid 3px;
+      font-size: 1.2rem; }
+    .cart__payment button {
+      background-color: #3d8ab9;
+      color: white;
+      padding: 8px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      display: block;
+      width: 100%;
+      margin-top: 20px; }
+
+.footer {
+  height: 100%;
+  position: relative;
   padding: 0;
-  box-sizing: border-box; }
+  background-color: #2f6484;
+  font-family: "Lato", sans-serif;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px; }
+  .footer__links {
+    display: flex;
+    padding: 20px; }
+    .footer__links .information, .footer__links .brands, .footer__links .contact {
+      padding: 20px;
+      display: inline-block;
+      width: 300px; }
+      .footer__links .information h3, .footer__links .brands h3, .footer__links .contact h3 {
+        font-size: 1.2rem;
+        padding: 5px; }
+      .footer__links .information li, .footer__links .brands li, .footer__links .contact li {
+        font-size: 0.9rem;
+        list-style-type: none;
+        color: black;
+        padding: 5px; }
+      .footer__links .information a, .footer__links .brands a, .footer__links .contact a {
+        color: black; }
+    .footer__links .contact {
+      width: 350px; }
+  .footer .chatbox {
+    width: 360px;
+    height: 300px;
+    position: absolute;
+    bottom: 30px;
+    right: 20px;
+    border: solid 4px black;
+    color: black;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #c9d6de;
+    font-family: "Lato", sans-serif;
+    letter-spacing: 4px; }
+    .footer .chatbox h3 {
+      font-size: 1.3rem;
+      background-color: black;
+      padding: 10px;
+      color: #eff3f5; }
+  .footer__subscribe {
+    background-color: #eff3f5;
+    color: black;
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    width: 100%; }
+    .footer__subscribe--newsletter {
+      width: 580px;
+      display: inline-block;
+      border-right: solid 4px #3d8ab9;
+      margin-left: -20px; }
+      .footer__subscribe--newsletter label {
+        font-size: 1.4rem;
+        font-weight: bold;
+        padding: 10px; }
+      .footer__subscribe--newsletter input {
+        width: 400px;
+        height: 40px;
+        padding: 10px; }
+      .footer__subscribe--newsletter button {
+        width: 40px;
+        height: 40px;
+        background-color: #c9d6de;
+        font-size: 1rem; }
+      .footer__subscribe--newsletter button:hover {
+        background-color: #1a1f21;
+        color: #c9d6de; }
+    .footer__subscribe--social {
+      width: 250px;
+      display: inline-block; }
+      .footer__subscribe--social h3 {
+        font-size: 1.3rem;
+        font-weight: bold; }
+    .footer__subscribe .fa {
+      padding: 20px;
+      font-size: 30px;
+      width: 65px;
+      height: 65px;
+      border-radius: 50%;
+      text-align: center;
+      text-decoration: none;
+      margin: 5px 2px;
+      margin: 5px; }
+    .footer__subscribe .fa:hover {
+      background: #c9d6de;
+      color: #1a1f21; }
+    .footer__subscribe .fa-instagram, .footer__subscribe .fa-facebook {
+      background: #1a1f21;
+      color: #c9d6de; }
+  .footer__copyright {
+    font-family: "Questrial", sans-serif;
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    letter-spacing: 5px;
+    font-size: 0.6rem;
+    text-align: center; }
 
 .header__top--contact {
   font-family: "Questrial", sans-serif;
@@ -334,62 +513,39 @@
   .search-bar i {
     font-size: 1.2rem; }
 
-.shop-all {
+.product {
   font-family: "Lato", sans-serif;
   display: flex;
-  justify-content: center; }
-  .shop-all .filter {
-    margin-left: 2%;
-    padding: auto 10px;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    min-width: 300px;
-    height: 100%;
-    background-color: #eff3f5; }
-    .shop-all .filter h3 {
-      margin: 20px auto;
-      text-transform: uppercase;
-      font-size: 1.3rem;
-      padding-bottom: 20px;
-      border-bottom: #3d8ab9 solid 3px;
-      letter-spacing: 2px; }
-    .shop-all .filter label {
-      padding: 2px 10px;
-      letter-spacing: 1px; }
-    .shop-all .filter input {
-      margin: 8px auto; }
-  .shop-all .products-gallery {
-    width: 75vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 30px 20px;
-    margin-right: 2%;
-    background-color: #f9f9f9; }
-    .shop-all .products-gallery .product {
-      display: inline-block;
-      padding: 10px 5px;
-      width: 180px;
-      text-align: center;
-      font-size: 0.9rem; }
-      .shop-all .products-gallery .product img {
-        width: 160px;
-        height: 150px; }
-      .shop-all .products-gallery .product-brand {
-        font-weight: bold;
-        font-size: 1.1rem;
-        letter-spacing: 2px;
-        font-family: "Vollkorn", serif; }
-      .shop-all .products-gallery .product-description {
-        background-color: #c9d6de;
-        width: 100%;
-        height: 125px;
-        font-size: 0.9rem;
-        padding: 5px;
-        border-top: solid 4px #3d8ab9; }
+  justify-content: center;
+  margin-bottom: 20px; }
+  .product__photos {
+    width: 400px;
+    height: 800px;
+    text-align: center;
+    background-color: #eff3f5;
+    border-right: #3d8ab9 5px solid; }
+    .product__photos img {
+      width: 350px;
+      height: 350px;
+      margin: 20px; }
+  .product__details {
+    padding: 60px;
+    width: 800px;
+    height: 800px;
+    background-color: #c9d6de;
+    letter-spacing: 1px; }
+    .product__details--brand {
+      font-weight: bold;
+      display: block;
+      font-size: 1.4rem; }
+  .product__add--quantity {
+    display: inline-block; }
+  .product__add--basket {
+    display: inline-block;
+    padding: 5px 14px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border-radius: 5px; }
 
 .register {
   display: flex;
@@ -522,189 +678,68 @@
       .register .signup h3 a:hover.other-register {
         border-bottom: #3d8ab9 solid 3px; }
 
-.cart {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background-color: #c9d6de;
-  height: 100%; }
-  .cart__basket {
-    background-color: #eff3f5;
-    padding: 20px;
-    width: 700px;
-    height: 100%; }
-    .cart__basket h3 {
-      padding: 10px 0px;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      font-size: 1.5rem; }
-    .cart__basket a {
-      color: #42a8e7;
-      font-weight: bold; }
-    .cart__basket--items {
-      margin-bottom: 10px; }
-    .cart__basket--item {
-      height: 120px;
-      margin-bottom: 8px;
-      background-color: white; }
-    .cart__basket--item-delete {
-      text-transform: uppercase; }
-    .cart__basket--item-photo {
-      background-color: black;
-      height: 100px;
-      width: 100px;
-      display: inline-block;
-      margin: 10px; }
-    .cart__basket--item-details {
-      display: inline-block;
-      padding: 14px 15px;
-      vertical-align: top;
-      position: relative; }
-    .cart__basket--item-quantity {
-      display: inline-block;
-      position: absolute;
-      left: 300px;
-      top: 35px; }
-    .cart__basket--item-price {
-      display: inline-block;
-      position: absolute;
-      left: 400px;
-      top: 35px; }
-  .cart__payment {
-    background-color: white;
-    padding: 25px;
-    width: 400px; }
-    .cart__payment h4 {
-      padding: 10px;
-      color: #3d8ab9;
-      letter-spacing: 2px; }
-    .cart__payment td {
-      padding: 7px 10px;
-      padding-right: 40px; }
-    .cart__payment td:nth-child(2) {
-      font-weight: bold; }
-    .cart__payment tr:last-child {
-      font-weight: bold;
-      border-top: #3d8ab9 solid 3px;
-      font-size: 1.2rem; }
-    .cart__payment button {
-      background-color: #3d8ab9;
-      color: white;
-      padding: 8px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      display: block;
-      width: 100%;
-      margin-top: 20px; }
-
-.footer {
-  height: 100%;
-  position: relative;
-  padding: 0;
-  background-color: #2f6484;
+.shop-all {
   font-family: "Lato", sans-serif;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 2px; }
-  .footer__links {
-    display: flex;
-    padding: 20px; }
-    .footer__links .information, .footer__links .brands, .footer__links .contact {
-      padding: 20px;
-      display: inline-block;
-      width: 300px; }
-      .footer__links .information h3, .footer__links .brands h3, .footer__links .contact h3 {
-        font-size: 1.2rem;
-        padding: 5px; }
-      .footer__links .information li, .footer__links .brands li, .footer__links .contact li {
-        font-size: 0.9rem;
-        list-style-type: none;
-        color: black;
-        padding: 5px; }
-      .footer__links .information a, .footer__links .brands a, .footer__links .contact a {
-        color: black; }
-    .footer__links .contact {
-      width: 350px; }
-  .footer .chatbox {
-    width: 360px;
-    height: 300px;
-    position: absolute;
-    bottom: 30px;
-    right: 20px;
-    border: solid 4px black;
-    color: black;
-    text-align: center;
-    border-radius: 20px;
-    background-color: #c9d6de;
-    font-family: "Lato", sans-serif;
-    letter-spacing: 4px; }
-    .footer .chatbox h3 {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px; }
+  .shop-all .filter {
+    margin-left: 2%;
+    padding: auto 10px;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    min-width: 300px;
+    height: 100%;
+    background-color: #eff3f5; }
+    .shop-all .filter h3 {
+      margin: 20px auto;
+      text-transform: uppercase;
       font-size: 1.3rem;
-      background-color: black;
-      padding: 10px;
-      color: #eff3f5; }
-  .footer__subscribe {
-    background-color: #eff3f5;
-    color: black;
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    width: 100%; }
-    .footer__subscribe--newsletter {
-      width: 580px;
+      padding-bottom: 20px;
+      border-bottom: #3d8ab9 solid 3px;
+      letter-spacing: 2px; }
+    .shop-all .filter label {
+      padding: 2px 10px;
+      letter-spacing: 1px; }
+    .shop-all .filter input {
+      margin: 8px auto; }
+  .shop-all .products-gallery {
+    width: 75vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 30px 20px;
+    margin-right: 2%;
+    background-color: #f9f9f9; }
+    .shop-all .products-gallery .product {
       display: inline-block;
-      border-right: solid 4px #3d8ab9;
-      margin-left: -20px; }
-      .footer__subscribe--newsletter label {
-        font-size: 1.4rem;
-        font-weight: bold;
-        padding: 10px; }
-      .footer__subscribe--newsletter input {
-        width: 400px;
-        height: 40px;
-        padding: 10px; }
-      .footer__subscribe--newsletter button {
-        width: 40px;
-        height: 40px;
-        background-color: #c9d6de;
-        font-size: 1rem; }
-      .footer__subscribe--newsletter button:hover {
-        background-color: #1a1f21;
-        color: #c9d6de; }
-    .footer__subscribe--social {
-      width: 250px;
-      display: inline-block; }
-      .footer__subscribe--social h3 {
-        font-size: 1.3rem;
-        font-weight: bold; }
-    .footer__subscribe .fa {
-      padding: 20px;
-      font-size: 30px;
-      width: 65px;
-      height: 65px;
-      border-radius: 50%;
+      padding: 10px 5px;
+      width: 180px;
       text-align: center;
-      text-decoration: none;
-      margin: 5px 2px;
-      margin: 5px; }
-    .footer__subscribe .fa:hover {
-      background: #c9d6de;
-      color: #1a1f21; }
-    .footer__subscribe .fa-instagram, .footer__subscribe .fa-facebook {
-      background: #1a1f21;
-      color: #c9d6de; }
-  .footer__copyright {
-    font-family: "Questrial", sans-serif;
-    background-color: black;
-    color: white;
-    text-transform: uppercase;
-    padding: 10px 20px;
-    letter-spacing: 5px;
-    font-size: 0.6rem;
-    text-align: center; }
+      font-size: 0.9rem; }
+      .shop-all .products-gallery .product img {
+        width: 160px;
+        height: 150px; }
+      .shop-all .products-gallery .product-brand {
+        font-weight: bold;
+        font-size: 1.1rem;
+        letter-spacing: 2px;
+        font-family: "Vollkorn", serif; }
+      .shop-all .products-gallery .product-description {
+        background-color: #c9d6de;
+        width: 100%;
+        height: 125px;
+        font-size: 0.9rem;
+        padding: 5px;
+        border-top: solid 4px #3d8ab9; }
+
+*, *:before, *:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
 @media (max-width: 1186px) {
   .search-bar {
